tests/ui/issues/issue-42755.stderr
error: repetition matches empty token tree
  --> $DIR/issue-42755.rs:2:7
   |
LL |     ($($p:vis)*) => {}
   |       ^^^^^^^^

error: aborting due to 1 previous error

